--- a/frontend/src/components/ControlPad.css
+++ b/frontend/src/components/ControlPad.css
@@ -60,12 +60,13 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-left: 10px;
 }
 
 .control-button {
   width: 50px;
   height: 50px;
-  font-size: 30px;
+  font-size: 20px;
   cursor: pointer;
   background-color: #61dafb;
   border: none;
@@ -98,4 +99,8 @@
 
 .dpad .down {
   grid-area: down;
+}
+
+.control-button.z-up{
+  margin-left: 0px;
 }
